Formatting and markdown notes for Static and Dynamic CNN notebooks
Signed-off-by: Aiden <mw3dbest@gmail.com>

--- a/DCNN.ipynb
+++ b/DCNN.ipynb
@@ -1,11 +1,44 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
+   "source": [
+    "# Dynamic Convolutional Neural Network\n",
+    "***\n",
+    "# Table of Contents\n",
+    "1.   [Imports](#Imports)\n",
+    "2.   [Dataset Object](#Dataset-Object)\n",
+    "3.   [Data Loading](#Data-Loading)\n",
+    "4.   [Model](#Model)\n",
+    "5.   [Setup](#Setup)\n",
+    "6.   [Training](#Training)\n",
+    "7.   [Testing](#Testing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Imports\n",
+    "\n",
+    "The necessary libraries are imported at this stage.\n",
+    "\n",
+    "* torch - Python pytorch library used to create and train the CNN\n",
+    "* numpy - Efficient data arrays\n",
+    "* pandas - Data applications"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import torch\n",
@@ -15,7 +48,32 @@
     "from torch.optim import Adam\n",
     "from torch.utils.data import Dataset\n",
     "import torch.nn.functional as F"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Dataset Object\n",
+    "\n",
+    "Although not fully required it is helpful to create a custom torch.utils.data.Dataset when using the pytorch library.\n",
+    "This makes the splitting and feeding of data into the network easier.\n",
+    "\n",
+    "## Encoding\n",
+    "\n",
+    "A dict is defined 0-2 for the Dynamic activities in the dataset."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -34,6 +92,27 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Dataset\n",
+    "\n",
+    "The object is defined as below for the UCI dataset. 3 functions need to be implemented **__init__**, **__len__** and\n",
+    "**__getitem__**.\n",
+    "\n",
+    "In initialisation the data is split into X and y variables and turned into tensors.\n",
+    "\n",
+    "The X variable has shape (row_count, 1, feature_count). 1 since there is only one channel of data.\n",
+    "\n",
+    "The static features are removed."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -72,18 +151,44 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Initialise the 3 datasets that will be used."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "outputs": [],
    "source": [
     "train_data = UCI_Dynamic_Dataset(csv_file='train.csv')\n",
     "valid_data = UCI_Dynamic_Dataset(csv_file='valid.csv')\n",
-    "test_data = UCI_Dynamic_Dataset(csv_file='test.csv')\n"
+    "test_data = UCI_Dynamic_Dataset(csv_file='test.csv')"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Data Loading\n",
+    "\n",
+    "Using the DataLoader object load in the data, shuffling and assigning a batch size of 64."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -100,6 +205,20 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Model\n",
+    "\n",
+    "The Dynamic CNN is implemented below, documentation is provided in the report."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -132,6 +251,23 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Setup\n",
+    "\n",
+    "In this step we intiialise the loss, optimizer and model objects. For this problem we used cross entropy loss and the\n",
+    "adam optimizer.\n",
+    "\n",
+    "If found we use cuda GPU acceleration to make the process faster."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "outputs": [
@@ -145,7 +281,6 @@
     }
    ],
    "source": [
-    "#CrossEntropyLoss not MSE because\n",
     "criterion = CrossEntropyLoss()\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
@@ -160,6 +295,20 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Training\n",
+    "\n",
+    "In this step the model is trained. Validation is done so we can observe the progress."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -243,6 +392,20 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Testing\n",
+    "\n",
+    "Finally the model is tested on the test set."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
