--- a/SCNN.ipynb
+++ b/SCNN.ipynb
@@ -1,6 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Static Convolutional Neural Network\n",
+    "***\n",
+    "# Table of Contents\n",
+    "1.   [Imports](#Imports)\n",
+    "2.   [Dataset Object](#Dataset-Object)\n",
+    "3.   [Data Loading](#Data-Loading)\n",
+    "4.   [Model](#Model)\n",
+    "5.   [Setup](#Setup)\n",
+    "6.   [Training](#Training)\n",
+    "7.   [Testing](#Testing)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Imports\n",
+    "\n",
+    "The necessary libraries are imported at this stage.\n",
+    "\n",
+    "* torch - Python pytorch library used to create and train the CNN\n",
+    "* numpy - Efficient data arrays\n",
+    "* pandas - Data applications"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,6 +46,22 @@
     "from torch.optim import Adam\n",
     "from torch.utils.data import Dataset"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Dataset Object\n",
+    "\n",
+    "Although not fully required it is helpful to create a custom torch.utils.data.Dataset when using the pytorch library.\n",
+    "This makes the splitting and feeding of data into the network easier.\n",
+    "\n",
+    "## Encoding\n",
+    "\n",
+    "A dict is defined 0-2 for the Static activities in the dataset."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -29,6 +78,24 @@
     "       \"WALKING_UPSTAIRS\":5\n",
     "       }"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Dataset\n",
+    "\n",
+    "The object is defined as below for the UCI dataset. 3 functions need to be implemented **__init__**, **__len__** and\n",
+    "**__getitem__**.\n",
+    "\n",
+    "In initialisation the data is split into X and y variables and turned into tensors.\n",
+    "\n",
+    "The X variable has shape (row_count, 1, feature_count). 1 since there is only one channel of data.\n",
+    "\n",
+    "The dynamic features are removed."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -61,6 +128,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Initialise the 3 datasets that will be used."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -72,22 +148,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "828"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "valid_data.__len__()"
-   ]
+    "# Data Loading\n",
+    "\n",
+    "Using the DataLoader object load in the data, shuffling and assigning a batch size of 64."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -99,6 +168,17 @@
     "validloader = torch.utils.data.DataLoader(valid_data, batch_size=32, shuffle=True)\n",
     "testloader = torch.utils.data.DataLoader(test_data, batch_size=32, shuffle=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Model\n",
+    "\n",
+    "The Static CNN is implemented below, documentation is provided in the report."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -143,6 +223,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Setup\n",
+    "\n",
+    "In this step we intiialise the loss, optimizer and model objects. For this problem we used cross entropy loss and the\n",
+    "adam optimizer.\n",
+    "\n",
+    "If found we use cuda GPU acceleration to make the process faster.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -157,7 +251,6 @@
     }
    ],
    "source": [
-    "#CrossEntropyLoss not MSE because\n",
     "criterion = CrossEntropyLoss()\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
@@ -168,6 +261,17 @@
     "optimizer = Adam(model.parameters(), lr=0.0005)\n",
     "model.to(device)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Training\n",
+    "\n",
+    "In this step the model is trained. Validation is done so we can observe the progress."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -247,6 +351,17 @@
     "        if (epoch+1) % step == 0:\n",
     "            print('{} Loss: {:.4f}'.format(phase, epoch_loss))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Testing\n",
+    "\n",
+    "Finally the model is tested on the test set."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
