Added sklearn metric scores and confusion matrix to cnn notebooks
Signed-off-by: Aiden <mw3dbest@gmail.com>

--- a/New NN.ipynb
+++ b/New NN.ipynb
@@ -296,11 +296,13 @@
     "correct = 0\n",
     "total = 0\n",
     "model.cpu()\n",
+    "predictions = []\n",
     "with torch.no_grad():\n",
     "    for inputs, labels in testloader:\n",
     "        inputs, labels = inputs.float(), labels.long()\n",
     "        outputs = model(inputs)\n",
     "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        predictions.append(predicted)\n",
     "        total += labels.size(0)\n",
     "        correct += (predicted == labels).sum().item()\n",
     "\n",
