--- a/DACMLT.ipynb
+++ b/DACMLT.ipynb
@@ -50,9 +50,8 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score, fbeta_score, precision_score, recall_score, confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score, fbeta_score, precision_score, recall_score, confusion_matrix, make_scorer\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import make_scorer\n",
     "# Pretty display for notebooks\n",
     "%matplotlib inline"
    ],
