--- a/ODSCNN.ipynb
+++ b/ODSCNN.ipynb
@@ -1,18 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "# Static Convolutional Neural Network\n",
@@ -127,8 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-1-5155ec885729>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[1;32mclass\u001B[0m \u001B[0mUCI_Static_Dataset\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mDataset\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m     \u001B[1;34m\"\"\"UCI dataset.\"\"\"\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m     \u001B[1;32mdef\u001B[0m \u001B[0m__init__\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mcsv_file\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m         \u001B[0mdata\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mpd\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mread_csv\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mcsv_file\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'Dataset' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class UCI_Static_Dataset(Dataset):\n",
     "    \"\"\"UCI dataset.\"\"\"\n",
@@ -141,7 +141,7 @@
     "        data = pd.DataFrame(data.drop(['Label'],axis=1))\n",
     "        self.data_x = np.array(data)\n",
     "        # [batch, channels, features]\n",
-    "        self.data_x = self.data_x.reshape(len(self.data_x), 1, 325)\n",
+    "        self.data_x = self.data_x.reshape(len(self.data_x), 1, 359)\n",
     "        self.data_x  = torch.from_numpy(self.data_x)\n",
     "        self.data_y = self.data_y.astype(int)\n",
     "        self.data_y = torch.from_numpy(self.data_y)\n",
