added structure and standar pie/confusion visuals
Signed-off-by: Aiden <mw3dbest@gmail.com>

--- a/SCNN.ipynb
+++ b/SCNN.ipynb
@@ -48,8 +48,7 @@
     "from torch.optim import Adam\n",
     "from torch.utils.data import Dataset\n",
     "from sklearn.metrics import accuracy_score, fbeta_score, precision_score, recall_score, confusion_matrix\n",
-    "import itertools\n",
-    "import matplotlib.pyplot as plt"
+    "import Helper as h"
    ]
   },
   {
@@ -74,14 +73,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "activity_encode = {\n",
-    "        \"LAYING\":0,\n",
-    "       \"SITTING\":1,\n",
-    "       \"STANDING\":2,\n",
-    "        \"WALKING\":3,\n",
-    "       \"WALKING_DOWNSTAIRS\":4,\n",
-    "       \"WALKING_UPSTAIRS\":5\n",
-    "       }"
+    "activity_encode =   {\n",
+    "                        \"LAYING\":0,\n",
+    "                        \"SITTING\":1,\n",
+    "                        \"STANDING\":2,\n",
+    "                        \"WALKING\":3,\n",
+    "                        \"WALKING_DOWNSTAIRS\":4,\n",
+    "                        \"WALKING_UPSTAIRS\":5\n",
+    "                    }"
    ]
   },
   {
@@ -151,6 +150,22 @@
     "valid_data = UCI_Static_Dataset(csv_file='valid.csv')\n",
     "test_data = UCI_Static_Dataset(csv_file='test.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "h.pie('Our Dataset/train.csv', activity_encode, 2)\n",
+    "h.pie('Our Dataset/valid.csv', activity_encode, 2)\n",
+    "h.pie('Our Dataset/test.csv', activity_encode, 2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -232,7 +247,7 @@
    "source": [
     "# Setup\n",
     "\n",
-    "In this step we intiialise the loss, optimizer and model objects. For this problem we used cross entropy loss and the\n",
+    "In this step we initialise the loss, optimizer and model objects. For this problem we used cross entropy loss and the\n",
     "adam optimizer.\n",
     "\n",
     "If found we use cuda GPU acceleration to make the process faster.\n"
@@ -378,8 +393,6 @@
    },
    "outputs": [],
    "source": [
-    "correct = 0\n",
-    "total = 0\n",
     "model.cpu()\n",
     "predictions = []\n",
     "test_labels = []\n",
@@ -411,41 +424,6 @@
     }
    ],
    "source": [
-    "#Confusion Matrix maps out the predicted label given to the data with the actual label\n",
-    "#Helps us check the rate of true/false positives and true/false negatives\n",
-    "#parameters are the true labels, and the predicted labels\n",
-    "\n",
-    "# https://sklearn.org/auto_examples/model_selection/plot_confusion_matrix.html\n",
-    "def plot_confusion_matrix(cm, classes,\n",
-    "                          normalize=False,\n",
-    "                          title='Confusion matrix',\n",
-    "                          cmap=plt.cm.Blues):\n",
-    "    \"\"\"\n",
-    "    This function prints and plots the confusion matrix.\n",
-    "    Normalization can be applied by setting `normalize=True`.\n",
-    "    \"\"\"\n",
-    "    if normalize:\n",
-    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
-    "\n",
-    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
-    "    plt.title(title)\n",
-    "    plt.colorbar()\n",
-    "    tick_marks = np.arange(len(classes))\n",
-    "    plt.xticks(tick_marks, classes, rotation=45)\n",
-    "    plt.yticks(tick_marks, classes)\n",
-    "\n",
-    "    fmt = '.2f' if normalize else 'd'\n",
-    "    thresh = cm.max() / 2.\n",
-    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
-    "        plt.text(j, i, format(cm[i, j], fmt),\n",
-    "                 horizontalalignment=\"center\",\n",
-    "                 color=\"white\" if cm[i, j] > thresh else \"black\")\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "    plt.ylabel('True label')\n",
-    "    plt.xlabel('Predicted label')\n",
-    "\n",
-    "\n",
     "cnf_matrix = confusion_matrix(test_labels, predictions)\n",
     "np.set_printoptions(precision=2)\n",
     "\n",
@@ -454,9 +432,8 @@
     "                \"SITTING\":1,\n",
     "                \"STANDING\":2,\n",
     "             }\n",
-    "# Plot non-normalized confusion matrix\n",
-    "plt.figure()\n",
-    "plot_confusion_matrix(cnf_matrix, classes=classes, normalize=True,title='Confusion matrix')\n"
+    "\n",
+    "h.plot_confusion_matrix(cnf_matrix, classes=classes, normalize=True, title='UCI Static Confusion Matrix')\n"
    ],
    "metadata": {
     "collapsed": false,
