Added saving/loading features
Signed-off-by: Aiden <mw3dbest@gmail.com>

--- a/ODDCNN.ipynb
+++ b/ODDCNN.ipynb
@@ -344,11 +344,19 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "model = DynamicCNN().double()\n",
-    "epochs = 11\n",
     "\n",
-    "step = 1\n",
-    "optimizer = Adam(model.parameters(), lr=0.00005)\n",
-    "model.to(device)"
+    "train = True\n",
+    "\n",
+    "# Set for training\n",
+    "if train:\n",
+    "    epochs = 11\n",
+    "    step = 1\n",
+    "    optimizer = Adam(model.parameters(), lr=0.00005)\n",
+    "    model.to(device)\n",
+    "# Load Existing, (do not train again if loaded)\n",
+    "else:\n",
+    "    state_dict = torch.load('Models/ODCNN.pth')\n",
+    "    model.load_state_dict(state_dict)"
    ],
    "metadata": {
     "collapsed": false,
@@ -581,13 +589,43 @@
     }
    ],
    "source": [
+    "# Print metrics\n",
     "print(\"Final accuracy score on the testing data: {:.4f}\".format(accuracy_score(test_labels, predictions)))\n",
     "print(\"Final F-score on the testing data: {:.4f}\".format(fbeta_score(test_labels, predictions, beta = 0.5,average='weighted')))\n",
     "print(\"Final precision score on the testing data: {:.4f}\".format(precision_score(test_labels, predictions, average='weighted')))\n",
-    "print(\"Final recall score on the testing data: {:.4f}\".format(recall_score(test_labels, predictions, average='weighted')))\n",
+    "print(\"Final recall score on the testing data: {:.4f}\".format(recall_score(test_labels, predictions, average='weighted')))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Save model for neutron\n",
+    "batch = next(iter(trainloader))[0].to(device).float()\n",
+    "torch.onnx.export(model, batch, 'Visualizations/CNN ONNX/ODDCNN.onnx', output_names=[\"Activity\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# save model\n",
     "\n",
-    "\n",
-    "\n"
+    "torch.save(model.state_dict(), 'Models/ODDCNN.pth')\n"
    ],
    "metadata": {
     "collapsed": false,
