--- a/ODSCNN.ipynb
+++ b/ODSCNN.ipynb
@@ -325,11 +325,19 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "model = StaticCNN()\n",
-    "epochs = 10\n",
     "\n",
-    "step = epochs//5\n",
-    "optimizer = Adam(model.parameters(), lr=0.0005)\n",
-    "model.to(device)"
+    "train = True\n",
+    "\n",
+    "# Set for training\n",
+    "if train:\n",
+    "    epochs = 10\n",
+    "    step = epochs//5\n",
+    "    optimizer = Adam(model.parameters(), lr=0.0005)\n",
+    "    model.to(device)\n",
+    "# Load Existing, (do not train again if loaded)\n",
+    "else:\n",
+    "    state_dict = torch.load('Models/ODSCNN.pth')\n",
+    "    model.load_state_dict(state_dict)"
    ],
    "metadata": {
     "collapsed": false,
@@ -528,13 +536,43 @@
     }
    ],
    "source": [
+    "# Print metrics\n",
     "print(\"Final accuracy score on the testing data: {:.4f}\".format(accuracy_score(test_labels, predictions)))\n",
     "print(\"Final F-score on the testing data: {:.4f}\".format(fbeta_score(test_labels, predictions, beta = 0.5,average='weighted')))\n",
     "print(\"Final precision score on the testing data: {:.4f}\".format(precision_score(test_labels, predictions, average='weighted')))\n",
-    "print(\"Final recall score on the testing data: {:.4f}\".format(recall_score(test_labels, predictions, average='weighted')))\n",
+    "print(\"Final recall score on the testing data: {:.4f}\".format(recall_score(test_labels, predictions, average='weighted')))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Save model for neutron\n",
+    "batch = next(iter(trainloader))[0].to(device).float()\n",
+    "torch.onnx.export(model, batch, 'Visualizations/CNN ONNX/ODSCNN.onnx', output_names=[\"Activity\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# save model\n",
     "\n",
-    "\n",
-    "\n"
+    "torch.save(model.state_dict(), 'Models/ODSCNN.pth')\n"
    ],
    "metadata": {
     "collapsed": false,
