--- a/SCNN.ipynb
+++ b/SCNN.ipynb
@@ -211,34 +211,25 @@
     "        super(StaticCNN, self).__init__()\n",
     "\n",
     "        self.cnn_layers = Sequential(\n",
-    "            # a\n",
-    "            Conv1d(1, 30, kernel_size=tuple([3])), #stride=tuple([1])),\n",
+    "            Conv1d(1, 30, kernel_size=tuple([3])),\n",
     "            ReLU(),\n",
     "            Conv1d(30, 50, kernel_size=tuple([3])),\n",
     "            ReLU(),\n",
     "            Conv1d(50, 100, kernel_size=tuple([3])),\n",
     "            ReLU(),\n",
-    "            # Flatten\n",
     "            Flatten()\n",
     "        )\n",
     "\n",
     "        self.linear_layers = Sequential(\n",
     "            Dropout(0.5),\n",
     "            Linear(55500, 3),\n",
-    "            #ReLU(inplace=True),\n",
     "            Softmax(dim=1)\n",
     "        )\n",
     "\n",
     "    # Defining the forward pass\n",
     "    def forward(self, x):\n",
-    "        # print(x.shape)\n",
     "        x = self.cnn_layers(x)\n",
-    "        # print(x.shape)\n",
-    "        # x = x.view(-1, 32*100*561)\n",
-    "        #x = Flatten(x)\n",
-    "        #print(x.shape)\n",
     "        x = self.linear_layers(x)\n",
-    "        #print(x.shape)\n",
     "        return x"
    ]
   },
@@ -275,11 +266,19 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "model = StaticCNN()\n",
-    "epochs = 10\n",
     "\n",
-    "step = epochs//5\n",
-    "optimizer = Adam(model.parameters(), lr=0.0005)\n",
-    "model.to(device)"
+    "train = True\n",
+    "\n",
+    "# Set for training\n",
+    "if train:\n",
+    "    epochs = 10\n",
+    "    step = epochs//5\n",
+    "    optimizer = Adam(model.parameters(), lr=0.0005)\n",
+    "    model.to(device)\n",
+    "# Load Existing, (do not train again if loaded)\n",
+    "else:\n",
+    "    state_dict = torch.load('Models/SCNN.pth')\n",
+    "    model.load_state_dict(state_dict)"
    ]
   },
   {
@@ -458,10 +457,43 @@
     }
    ],
    "source": [
+    "# Print metrics\n",
     "print(\"Final accuracy score on the testing data: {:.4f}\".format(accuracy_score(test_labels, predictions)))\n",
     "print(\"Final F-score on the testing data: {:.4f}\".format(fbeta_score(test_labels, predictions, beta = 0.5,average='weighted')))\n",
     "print(\"Final precision score on the testing data: {:.4f}\".format(precision_score(test_labels, predictions, average='weighted')))\n",
-    "print(\"Final recall score on the testing data: {:.4f}\".format(recall_score(test_labels, predictions, average='weighted')))\n",
+    "print(\"Final recall score on the testing data: {:.4f}\".format(recall_score(test_labels, predictions, average='weighted')))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Save model for neutron\n",
+    "batch = next(iter(trainloader))[0].to(device).float()\n",
+    "torch.onnx.export(model, batch, 'Visualizations/CNN ONNX/SCNN.onnx', output_names=[\"Activity\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# save model\n",
+    "\n",
+    "torch.save(model.state_dict(), 'Models/SCNN.pth')\n",
     "\n"
    ],
    "metadata": {
